--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -82,6 +82,7 @@ body {
     sans-serif;
   font-size: 15px;
   font-weight: normal;
+  cursor: default;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
